# kv

./: .gitignore  LICENSE.txt  README.md  makefile  pyproject.toml  tox.ini
.github/workflows/: test.yml
src/kv/: __init__.py  kv.py
tests/: conftest.py  test_all.py  test_license.py
