[project]
name = "kv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.mypy]
ignore_missing_imports = true
follow_imports = "normal"

namespace_packages = true
disallow_untyped_defs = true
# disallow_any_unimported = true
# disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
warn_unused_configs = true
explicit_package_bases = true
enable_error_code = "explicit-override"
extra_checks = true
local_partial_types = true


files = [
    "./src/**/*.py",
    "./tests/**/*.py",
    #
]

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    ".env",
    ".eggs",
    "*.egg",
    ".tox",
    ".mypy_cache",
    ".pytest_cache",
    ".vscode",
    "*-env",
]
line-length = 120
lint.ignore = []
lint.select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "W",   # warnings
    "UP",  # pyupgrade
    "I",   # isort
    "Q",   # flake8-quotes
    "RUF", # ruff
    # "PL",
]
output-format = 'concise'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-s", "--tb=short", "--color=yes"]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "mock>=5.2.0",
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]
